src/agent/cli/product/tui_app/src/snapshots/lha_cli__product__tui_app__status_indicator_widget__tests__renders_truncated.snap
---
source: src/agent/cli/src/../product/tui_app/src/status_indicator_widget.rs
expression: terminal.backend()
---
"• Working (0s • esc…"
"                    "
